<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_layout"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="65dp"
            android:layout_height="27dp"
            android:id="@+id/textView4" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textColor="@color/colorAccent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
    >
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/beginner" android:textOn="@string/beginner" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/baller" android:textOn="@string/baller" android:layout_marginStart="16dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:background="@drawable/swoosh_toggle"
            android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat" android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>