<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/background"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/background" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:layout_width="239dp"
            android:layout_height="68dp"
            android:id="@+id/textView" android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:text="@string/go_all_in" android:textSize="46sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="234dp"
            android:layout_height="46dp"
            android:id="@+id/textView2" android:textColor="@color/colorAccent"
            android:textSize="22sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textStyle="bold"
            android:fontFamily="@font/montserrat"/>
    <TextView
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:id="@+id/textView3" android:singleLine="false"
            android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"
            android:textAlignment="center" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="320dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.482" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button"
            android:id="@+id/getStartedBtn"/>

</android.support.constraint.ConstraintLayout>