<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">


    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:contentDescription="@string/app_layout"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="144dp"
            android:layout_height="34dp"
            android:id="@+id/textView6" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:textSize="18sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="342dp"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="8dp"
            android:id="@+id/linearLayout">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton" android:textOff="@string/mens" android:textOn="@string/mens"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="348dp"
            android:layout_height="48dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.578"
            android:id="@+id/linearLayout2">
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton7" android:textOff="@string/womens" android:textOn="@string/womens"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="354dp"
            android:layout_height="51dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/imageView" app:layout_constraintEnd_toEndOf="@+id/imageView"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.631" android:id="@+id/linearLayout3">
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton8" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/leaguenxtButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:background="@drawable/swoosh_button" android:fontFamily="@font/montserrat" android:textSize="18sp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"
            android:onClick="leagueNextClicked" android:textColor="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>